# PyBoilerPlate

./: .gitignore  HOW2USEIT.md  ProjectSetup.ps1  ProjectSetup.sh  README.md  pyproject.toml  setup.ps1  setup.sh
src/MyModule/: __init__.py
tests/: test_mymodule.py
